--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <div class="form-popup" id="myForm">
     <form id="form_clean" class="form-container">
-      <h1>Login</h1>
+      <h1>Create a Book</h1>
       <label for="title"><b>Title</b></label>
       <input id="form_title" type="text" placeholder="Enter title" name="title" required>
       <label for="author"><b>Author</b></label>
@@ -30,7 +30,7 @@
       <input id="pages" type="number" placeholder="# of pages in Book" name="title" required>
       <label for="read"><b>Read</b></label>
       <input id="read" type="checkbox" name="psw">
-      <button type="submit" class="btn" onclick="truecloseForm()">Login</button>
+      <button type="submit" class="btn" onclick="truecloseForm()">Add Button</button>
       <button class="btn cancel" onclick="closeForm()">Close</button>
     </form>
   </div>
